...
import UIKit

class ArcanaViewPageController: UIPageViewController {
    
    fileprivate enum CurrentPage {
        case arcana
        case filter
    }
    
    fileprivate var currentPage: CurrentPage = .arcana
    
    init() {
        super.init(transitionStyle: .scroll, navigationOrientation: .horizontal, options: nil)
...
