...
        print("\(EN) has been deinited")
    }
}

class Mana: Ability {
    init() {
        super.init(kr: "마나의 소양", en: "mana")
    }
}

class ManaSlot: Ability {
    init() {
        super.init(kr: "마나 슬롯 속도", en: "manaSlot")
...
